Kubernetes/Prod/00-namespace-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    env: prod
    team: ptincatering
