Kubernetes/Prod/04-frontService.yaml
apiVersion: v1
kind: Service
metadata:
  name: ptin-front
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: ptin-front-app
  ports:
    - port: 80
      targetPort: 80
